[package]
name = "audiotest"
version = "0.1.0"
authors = ["josh <joshua@marinacci.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
websocket = "0.26.2"
serde_json = "1.0.64"
serde = { version="1.0.125", features = ["derive"] }
